refactor: 메서드 네이밍 변경 및 반환 타입 변경